--- a/mapcon/package.json
+++ b/mapcon/package.json
@@ -19,24 +19,25 @@
   "dependencies": {
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^3.5.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "knex": "^3.1.0",
-    "pg": "^8.13.1",
     "leaflet": "^1.7.1",
     "moment": "^2.29.1",
     "next": "^14.1.4",
     "next-auth": "^4.24.5",
     "npm": "^10.5.2",
+    "pg": "^8.13.1",
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
     "primereact": "^10.2.0-rc.2",
+    "prisma": "^5.22.0",
     "puppeteer": "^23.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "react-leaflet": "^4.2.1",
-    "chart.js": "^3.5.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
