--- a/mapcon/package.json
+++ b/mapcon/package.json
@@ -17,6 +17,7 @@
     "not op_mini all"
   ],
   "dependencies": {
+    "@prisma/client": "^5.22.0",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "chart.js": "^3.5.0",
@@ -32,7 +33,6 @@
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
     "primereact": "^10.2.0-rc.2",
-    "prisma": "^5.22.0",
     "puppeteer": "^23.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -43,6 +43,7 @@
   "devDependencies": {
     "@types/react": "18.2.45",
     "copyfiles": "^2.4.1",
+    "prisma": "^5.22.0",
     "rimraf": "^6.0.1",
     "sharp": "^0.33.4",
     "typescript": "^4.7.4"
