--- a/mapcon/package.json
+++ b/mapcon/package.json
@@ -2,6 +2,9 @@
   "name": "aplicacaoweb",
   "version": "0.1.0",
   "private": true,
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/development_seed.ts"
+  },
   "scripts": {
     "dev": "cross-env NODE_ENV=development next dev -p 3000",
     "start": "cross-env NODE_ENV=production next start -p 3000",
@@ -41,11 +44,13 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/node": "^22.9.0",
     "@types/react": "18.2.45",
     "copyfiles": "^2.4.1",
     "prisma": "^5.22.0",
     "rimraf": "^6.0.1",
     "sharp": "^0.33.4",
-    "typescript": "^4.7.4"
+    "ts-node": "^10.9.2",
+    "typescript": "^4.9.5"
   }
 }
